Fixed letter-spacing  + text-centering bug for all browsers by padding left side by the same as the letter spacing

--- a/styles/sba.css
+++ b/styles/sba.css
@@ -70,6 +70,8 @@ a.visited {
 .titleJD {
     font-size: 2em;
     letter-spacing: 1em;
+    /* Compensate for all browsers centering bug */
+    padding-left: 1em;
     text-align: center;
     text-transform: uppercase;
 }
